[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/planets/earth/earth.png" type="Texture" id=1]
[ext_resource path="res://planet/planet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="Planet" type="Area2D"]
pause_mode = 2
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EndTimer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="FadeTween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Planet_body_entered"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="tween_all_completed" from="FadeTween" to="." method="_on_FadeTween_tween_all_completed"]
